--- a/homework9.tex
+++ b/homework9.tex
@@ -31,8 +31,8 @@ have:
 \section{NP solution}
 \begin{lstlisting}
 Boolean Q(G) {
-	guess(path); // nondeterministic O(p(|G|)
-	if (check(G, path) == yes) // deterministic O(p(|G|)
+	guess(path); // |path| < p(|G|)
+	if (check(G, path) == yes) // complexity < p(|G|)
 		return yes;
 	else
 		crash;
@@ -44,13 +44,14 @@ Note:
   exactely once
   \item check(G, path): returns yes if path is on G and path covers every node
   in G exactly once
+  \item $|G| = |V| + |E|$
 \end{enumerate}
 
 \section{NP solution}
 \begin{lstlisting}
 Boolean Q(G) {
-	guess(path); // nondeterministic O(p(|G|)
-	if (check(G, path) == yes) // deterministic O(p(|G|)
+	guess(path); // |path| < p(|G|)
+	if (check(G, path) == yes) // complexity < p(|G|)
 		return yes;
 	else
 		crash;
@@ -66,8 +67,8 @@ Note:
 \section{SAT}
 \begin{lstlisting}
 Boolean isEquivalent(C1, C2) {
-	C3 = makeXnor(C1, C2); // deterministic O(p(|C1|+|C2|)
-	if (isSatisfiable(C3)) { // deterministic O(p(|C1|+|C2|)
+	C3 = makeXnor(C1, C2); // |C3| < p(|C1|+|C2|)
+	if (isSatisfiable(C3)) { // complexity < p(|C1|+|C2|)
 		return false;
 	} else {
 		return true;
